Fix Tushare token access errors

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -18,11 +18,13 @@
             colors: {
               primary: "#0ea5b7",
               "background-light": "#f8fafc",
-              "background-dark": "#14171b",
+              "background-dark": "#151312",
+              "panel-dark": "#23201d",
+              "field-dark": "#26221f",
               "surface-light": "#ffffff",
-              "surface-dark": "#1b2126",
+              "surface-dark": "#1d1a18",
               "border-light": "#e2e8f0",
-              "border-dark": "#2f3940",
+              "border-dark": "#3a332d",
             },
             fontFamily: {
               sans: ["Inter", "sans-serif"],
